fix align center

--- a/fontend/includes/css/returnPolicy.css
+++ b/fontend/includes/css/returnPolicy.css
@@ -15,6 +15,7 @@ form {
 
 form label {
     display: flex;
+    justify-content: center;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 600;
